--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -25,20 +27,18 @@
          we do so here so that we can utilise Maven to track updates, etc. -->
     <fhir2.version>1.9.0</fhir2.version>
     <openmrs.version>2.6.0</openmrs.version>
-    <initializer.version>2.5.0</initializer.version>
+    <initializer.version>2.5.2</initializer.version>
     <webservices.rest.version>2.39.0</webservices.rest.version>
-    <addresshierarchy.version>2.15.1</addresshierarchy.version>
+    <addresshierarchy.version>2.15.2</addresshierarchy.version>
     <idgen.version>4.10.0</idgen.version>
     <legacyui.version>1.15.0</legacyui.version>
-    <metadatamapping.version>1.6.0</metadatamapping.version>
+    <metadatamapping.version>1.7.0-SNAPSHOT</metadatamapping.version>
     <metadatasharing.version>1.9.0</metadatasharing.version>
     <openconceptlab.version>2.1.0</openconceptlab.version>
     <!-- this is request for the OCL UI -->
     <owa.version>1.14.0</owa.version>
     <attachments.version>3.0.0</attachments.version>
-    <referencedemodata.version>2.3.0</referencedemodata.version>
-    <queue.version>1.0.0-alpha.1</queue.version>
-    <appointments.version>1.6.0</appointments.version>
+    <appointments.version>1.8.0-SNAPSHOT</appointments.version>
     <cohort.version>3.4.0</cohort.version>
     <reporting.version>1.25.0</reporting.version>
     <reportingrest.version>1.14.0</reportingrest.version>
@@ -46,7 +46,29 @@
     <calculation.version>1.3.0</calculation.version>
     <htmlwidgets.version>1.11.0</htmlwidgets.version>
     <serialization-xstream.version>0.2.16</serialization-xstream.version>
-    <ordertemplates.version>1.0.1</ordertemplates.version>
+    <adminui.version>1.6.0</adminui.version>
+    <dataexchange.version>1.3.8</dataexchange.version>
+    <metadatadeploy.version>1.13.0</metadatadeploy.version>
+    <reportingui.version>1.11.0</reportingui.version>
+    <emrapi.version>1.33.0</emrapi.version>
+    <allergyui.version>1.8.5</allergyui.version>
+    <event.version>2.10.0</event.version>
+    <spa.version>1.0.9</spa.version>
+    <appframework.version>2.17.0</appframework.version>
+    <teleconsultation.version>1.2.0-SNAPSHOT</teleconsultation.version>
+    <formentryapp.version>1.4.3</formentryapp.version>
+    <uicommons.version>2.23.0</uicommons.version>
+    <appui.version>1.16.0</appui.version>
+    <htmlformentry.version>5.1.0</htmlformentry.version>
+    <providermanagement.version>2.14.0</providermanagement.version>
+    <uiframework.version>3.23.0</uiframework.version>
+    <atlas.version>2.2.7</atlas.version>
+    <htmlformentryui.version>2.3.0</htmlformentryui.version>
+    <registrationapp.version>1.25.0</registrationapp.version>
+    <uilibrary.version>2.0.7</uilibrary.version>
+    <registrationcore.version>1.12.0</registrationcore.version>
+    <reportingcompatibility.version>2.0.9</reportingcompatibility.version>
+    <coreapps.version>1.38.0</coreapps.version>
   </properties>
 
   <dependencies>
@@ -125,18 +147,7 @@
       <version>${attachments.version}</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>referencedemodata-omod</artifactId>
-      <version>${referencedemodata.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>queue-omod</artifactId>
-      <version>${queue.version}</version>
-      <scope>provided</scope>
-    </dependency>
+
     <dependency>
       <groupId>org.bahmni.module</groupId>
       <artifactId>appointments-omod</artifactId>
@@ -177,6 +188,145 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>serialization.xstream-api</artifactId>
       <version>${serialization-xstream.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>adminui-omod</artifactId>
+      <version>${adminui.version}</version>
+      <scope>provided</scope>
+    </dependency>
+   
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>dataexchange-omod</artifactId>
+      <version>${dataexchange.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>metadatadeploy-omod</artifactId>
+      <version>${metadatadeploy.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>reportingui-omod</artifactId>
+      <version>${reportingui.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>emrapi-omod</artifactId>
+      <version>${emrapi.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>allergyui-omod</artifactId>
+      <version>${allergyui.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>event-omod</artifactId>
+      <version>${event.version}</version>
+      <scope>provided</scope>
+    </dependency> -->
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>spa-omod</artifactId>
+      <version>${spa.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>appframework-omod</artifactId>
+      <version>${appframework.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>teleconsultation-omod</artifactId>
+      <version>${teleconsultation.version}</version>
+      <scope>provided</scope>
+    </dependency> -->
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>formentryapp-omod</artifactId>
+      <version>${formentryapp.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>uicommons-omod</artifactId>
+      <version>${uicommons.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>appui-omod</artifactId>
+      <version>${appui.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>htmlformentry-omod</artifactId>
+      <version>${htmlformentry.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>providermanagement-omod</artifactId>
+      <version>${providermanagement.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>uiframework-omod</artifactId>
+      <version>${uiframework.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>atlas-omod</artifactId>
+      <version>${atlas.version}</version>
+      <scope>provided</scope>
+    </dependency> -->
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>htmlformentryui-omod</artifactId>
+      <version>${htmlformentryui.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>registrationapp-omod</artifactId>
+      <version>${registrationapp.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>uilibrary-omod</artifactId>
+      <version>${uilibrary.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>registrationcore-omod</artifactId>
+      <version>${registrationcore.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>reportingcompatibility-omod</artifactId>
+      <version>${reportingcompatibility.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>coreapps-omod</artifactId>
+      <version>${coreapps.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -237,7 +387,7 @@
             <configuration>
               <target>
                 <copy todir="${project.build.directory}/openmrs_config">
-                  <fileset dir="${project.basedir}/configuration"/>
+                  <fileset dir="${project.basedir}/configuration" />
                 </copy>
               </target>
             </configuration>
