frontend modules updated

--- a/frontend/spa-build-config.json
+++ b/frontend/spa-build-config.json
@@ -1,37 +1,34 @@
 {
   "frontendModules": {
-    "@openmrs/esm-devtools-app": "next",
-    "@openmrs/esm-implementer-tools-app": "next",
-    "@openmrs/esm-login-app": "next",
-    "@openmrs/esm-offline-tools-app": "next",
-    "@openmrs/esm-primary-navigation-app": "next",
-    "@openmrs/esm-home-app": "next",
-    "@openmrs/esm-form-entry-app": "next",
-    "@openmrs/esm-generic-patient-widgets-app": "next",
-    "@openmrs/esm-patient-allergies-app": "next",
-    "@openmrs/esm-patient-appointments-app": "next",
-    "@openmrs/esm-patient-attachments-app": "next",
-    "@openmrs/esm-patient-banner-app": "next",
-    "@openmrs/esm-patient-biometrics-app": "next",
-    "@openmrs/esm-patient-chart-app": "next",
-    "@openmrs/esm-patient-conditions-app": "next",
-    "@openmrs/esm-patient-forms-app": "next",
-    "@openmrs/esm-patient-medications-app": "next",
-    "@openmrs/esm-patient-notes-app": "next",
-    "@openmrs/esm-patient-programs-app": "next",
-    "@openmrs/esm-patient-test-results-app": "next",
-    "@openmrs/esm-patient-vitals-app": "next",
-    "@openmrs/esm-active-visits-app": "next",
-    "@openmrs/esm-appointments-app": "next",
-    "@openmrs/esm-outpatient-app": "next",
-    "@openmrs/esm-patient-list-app": "next",
-    "@openmrs/esm-patient-registration-app": "next",
-    "@openmrs/esm-patient-search-app": "next",
-    "@openmrs/esm-openconceptlab-app": "next",
-    "@openmrs/esm-dispensing-app": "next",
-    "@openmrs/esm-fast-data-entry-app": "next",
-    "@openmrs/esm-cohort-builder-app": "next",
-    "@openmrs/esm-form-builder-app": "next"
+    "@icap-ethiopia/esm-appointments-app": "3.0-pre.1004",
+    "@icap-ethiopia/esm-ethiohri-app": "0.0-pre.168",
+    "@icap-ethiopia/esm-patient-banner-app": "4.2.1-pre.1002",
+    "@icap-ethiopia/esm-patient-chart-app": "4.3.0-pre.1001",
+    "@icap-ethiopia/esm-patient-registration-app": "4.0.1-pre.113",
+    "@icap-ethiopia/esm-primary-navigation-app": "4.2.0-pre.1008",
+    "@ohri/openmrs-esm-ohri-cervical-cancer-app": "1.0.7-pre.2484",
+    "@ohri/openmrs-esm-ohri-core-app": "1.0.6-pre.1003",
+    "@ohri/openmrs-esm-ohri-form-render-app": "1.0.7-pre.2484",
+    "@openmrs/esm-devtools-app": "4.4.2-pre.712",
+    "@openmrs/esm-dispensing-app": "1.0.1-pre.182",
+    "@openmrs/esm-form-builder-app": "1.0.3-pre.322",
+    "@openmrs/esm-home-app": "4.1.1-pre.211",
+    "@openmrs/esm-implementer-tools-app": "4.4.2-pre.712",
+    "@openmrs/esm-login-app": "4.4.2-pre.712",
+    "@openmrs/esm-outpatient-app": "4.4.1-pre.1541",
+    "@openmrs/esm-patient-allergies-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-appointments-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-attachments-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-conditions-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-forms-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-immunizations-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-list-app": "4.4.1-pre.1541",
+    "@openmrs/esm-patient-medications-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-notes-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-search-app": "4.4.1-pre.1541",
+    "@openmrs/esm-patient-test-results-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-vitals-app": "4.5.1-pre.1475",
+    "@openmrs/esm-patient-programs-app": "4.5.1-pre.1475"
   },
   "spaPath": "$SPA_PATH",
   "apiUrl": "$API_URL",
