--- a/.github/workflows/ethiohri-distro.yml
+++ b/.github/workflows/ethiohri-distro.yml
@@ -40,6 +40,9 @@ jobs:
   docker_distro_backend:
     runs-on: ubuntu-latest
     needs: docker_setup
+
+    if: github.event_name == 'push' && github.event.changes != null && contains(github.event.changes, 'distro/')
+
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -65,6 +68,9 @@ jobs:
   docker_distro_frontend:
     runs-on: ubuntu-latest
     needs: docker_setup
+
+    if: github.event_name == 'push' && github.event.changes != null && contains(github.event.changes, 'frontend/')
+
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -92,6 +98,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: docker_setup
 
+    if: github.event_name == 'push' && github.event.changes != null && contains(github.event.changes, 'gateway/')
+
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -105,7 +113,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push
-        id: build-an-push
+        id: build-and-push
         uses: docker/build-push-action@v4
         with:
           context: ./gateway
